--- a/style/tree.css
+++ b/style/tree.css
@@ -53,7 +53,8 @@ body {
 }
 
 .node text {
-  font-size: 8px;
+  font-size:11px;
+  font-weight: bold;
   font-family: "Georgia";
   color: #4D3636;
 }
