--- a/style/tree.css
+++ b/style/tree.css
@@ -92,17 +92,37 @@ body {
   overflow:hidden;
 }
 
-#donations {
-  position: absolute;
+#bottomleft {
+  position: fixed; /* absolute */
+  float: left;
   bottom: 0;
-  left: 0;
+}
+
+#interface {
+  z-index: 99;
+  padding: 5px;
+  font-family: "Georgia";
+  font-size: 13px;
+  width: 150px;
+  line-height: 1.4;
+  background:rgba(0,0,0,.8);
+  color: white;
+  box-sizing: border-box;
+}
+
+input[name=kittyLimit] {
+  text-align:right;
+  width: 50px;
+  margin: 5px;
+}
+
+#donations {
   z-index: 99;
   padding: 6px;
   font-family: "Georgia";
   font-size: 13px;
   max-width: 850px;
   line-height: 1.4;
-  text-align: justify;
   background:rgba(0,0,0,.8);
   color: white;
   box-sizing: border-box;
